compiler/src/test/resources/golden/errors/type_set_key_bytes_nested.dawn
use std/set

type Blob = { name: String, body: Bytes }

fn f(b: Blob) -> Int = {
  var s: Set[Blob] = set.empty()
  s = set.insert(s, b)
  set.size(s)
}
