compiler/src/test/resources/golden/errors/type_set_key_bytes_nested.err
error: `Bytes` cannot be part of a Map/Set key type (inside `Blob`): Bytes hashes by identity, not content
  --> type_set_key_bytes_nested.dawn:6:14
  |
6 |   var s: Set[Blob] = set.empty()
  |              ^^^^
  = hint: key by a String instead: decode(b, "UTF-8") or a hex rendering
